packages/lang/test/__golden__/errors/fails-matching-missing-string.txt
error[TF010]: expected a regex string, e.g. `fails matching "certificate"`, found end of line
 --> fails-matching-missing-string.tflw:3:32
  |
3 |   expect request fails matching
  |                                ^
  |
  = help: expected a string
